fix: prevent layout shifting from scrollbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -72,7 +72,8 @@
 
   body {
     @apply bg-background text-foreground;
-    width: 100%;
+    overflow-x: hidden;
+    width: 100vw;
     height: 100%;
   }
 }
